# barista

./: .dockerignore  BUILD.bazel  angular.json  nx.json  package-lock.json  package.json  tsconfig.json
.circleci/: bazel.rc  config.yml
.deployment/: workspace-bazel.Dockerfile
apps/barista-design-system/: BUILD.bazel
apps/barista-design-system/src/app/: app.ts
apps/barista-design-system/src/app/components/nav/: nav.ts
apps/barista-design-system/src/components/: components.module.ts
apps/barista-design-system/src/pages/decision-graph-page/: decision-graph-page.ts
apps/barista-design-system/src/pages/decision-graph-page/components/ba-decision-graph/: ba-decision-graph.ts
apps/barista-design-system/src/pages/decision-graph-page/components/ba-decision-graph/ba-decision-graph-node/: ba-decision-graph-node.ts
apps/barista-design-system/src/pages/index-page/: index-page.ts
apps/barista-design-system/src/pages/overview-page/: overview-page.ts
apps/barista-design-system/src/pages/single-page/: single-page.html  single-page.module.ts  single-page.ts
apps/barista-design-system/src/shared/services/: recently-ordered.service.ts
apps/components-e2e/src/components/drawer/: drawer.html
apps/design-tokens-ui/src/services/palette/: palette-source.service.ts
apps/dev/src/: app.module.ts
apps/next/src/app/pages/next-error-page/: next-error-page.ts
apps/next/src/app/pages/next-index-page/: next-index-page.ts
apps/next/src/app/pages/next-single-page/: next-single-page.module.ts  next-single-page.ts
libs/barista-components/: BUILD.bazel
libs/barista-components/alert/src/: alert.ts
libs/barista-components/button/: BUILD.bazel  jest.config.js
libs/barista-components/button/src/: button.spec.ts  button.ts
libs/barista-components/core/: BUILD.bazel
libs/barista-components/core/src/util/: platform-util.ts  platform-utils.spec.ts
libs/barista-components/datepicker/src/: calendar.html  calendar.scss  calendar.ts  datepicker-module.ts  datepicker.html  datepicker.scss  datepicker.ts
libs/barista-components/random/: BUILD.bazel  index.ts  jest.config.json  tsconfig.json  tsconfig.spec.json
libs/barista-components/random/src/: calc-module.ts  calc.spec.ts  calc.ts  rand.html  rand.scss
libs/barista-components/table/src/: row.ts
libs/barista-components/theming/src/: theme.ts
libs/shared/data-access-strapi/src/lib/: page.service.ts
libs/shared/design-system/interfaces/: README.md
libs/shared/design-system/interfaces/src/: index.ts
libs/shared/design-system/interfaces/src/lib/: shared-design-system-interfaces.module.spec.ts  shared-design-system-interfaces.module.ts
libs/shared/design-system/ui/src/: index.ts
libs/shared/design-system/ui/src/lib/: shared-design-system-ui.module.spec.ts  shared-design-system-ui.module.ts
libs/tools/barista/src/: transform.spec.ts  transform.ts
libs/tools/barista/src/builder/: components.ts
libs/workspace/: builders.json  webpack.config.js
libs/workspace/src/builders/affected-e2e/: build.ts
libs/workspace/src/scripts/: api-guard-verify.ts
tools/bazel_build_cache/: setup_ci_build_cache.sh
tools/bazel_rules/: index.bzl  ng_module_macro.bzl
tools/bazel_rules/jest/: BUILD.bazel  barista_jest.bzl  jest-resolver.js  jest-runner.js
